vlib/v/checker/tests/assign_expr_type_err_b.vv
fn main() {
	mut foo := 10
	foo %= 'hello'
	_ = foo
}
